--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Misc/Tools and Libraries.md",
+            "file": "Personal/Tasks.md",
             "mode": "source",
             "source": false
           }
@@ -40,7 +40,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "backtracking",
+                "query": "number of islands",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -61,7 +61,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 431
+    "width": 430
   },
   "right": {
     "id": "b78f15cdafdd7f3a",
@@ -77,7 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Misc/Tools and Libraries.md",
+                "file": "Personal/Tasks.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -105,7 +105,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "Misc/Tools and Libraries.md"
+                "file": "Personal/Tasks.md"
               }
             }
           },
@@ -115,7 +115,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "Misc/Tools and Libraries.md",
+                "file": "Personal/Tasks.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": false
               }
@@ -130,15 +130,15 @@
   },
   "active": "2da34fa85bb1d1be",
   "lastOpenFiles": [
-    "Misc/Tools and Libraries.md",
-    "Misc/Tips and Tricks.md",
-    "Misc/Quotes.md",
-    "Misc/Solving Autocomplete Issue on Jupyter.md",
-    "Misc/My Mistakes.md",
-    "Tasks.md",
-    "Work/AIOPs.md",
-    "Work/KG for Log Analysis.md",
-    "Leetcode/Concepts/Backtracking.md",
-    "Leetcode/Questions/78. Subsets.md"
+    "Personal/Tasks.md",
+    "Personal/Quotes.md",
+    "Personal/My Mistakes.md",
+    "Personal/Piano.md",
+    "Personal/Interview Preparation Checklist.md",
+    "Personal/Interesting Concepts.md",
+    "Personal/Work/AIOPs.md",
+    "Personal/Work/KG for Log Analysis.md",
+    "Personal/Work/TODOs.md",
+    "Papers and Articles/SLOGERT.md"
   ]
 }
