--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -7,12 +7,8 @@
         "id": "2da34fa85bb1d1be",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "docs/ML/Locality Sensitive Hashing.md",
-            "mode": "preview",
-            "source": false
-          }
+          "type": "empty",
+          "state": {}
         }
       }
     ],
@@ -77,7 +73,6 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "docs/ML/Locality Sensitive Hashing.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -104,9 +99,7 @@
             "type": "leaf",
             "state": {
               "type": "outline",
-              "state": {
-                "file": "docs/ML/Locality Sensitive Hashing.md"
-              }
+              "state": {}
             }
           },
           {
@@ -115,7 +108,6 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "docs/ML/Locality Sensitive Hashing.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": false
               }
