--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -7,8 +7,12 @@
         "id": "2da34fa85bb1d1be",
         "type": "leaf",
         "state": {
-          "type": "empty",
-          "state": {}
+          "type": "markdown",
+          "state": {
+            "file": "docs/MOOCs/Book - Designing ML Systems (Chip Huyen)/C3 - Data Engineering Fundamentals.md",
+            "mode": "source",
+            "source": false
+          }
         }
       }
     ],
@@ -73,6 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
+                "file": "docs/MOOCs/Book - Designing ML Systems (Chip Huyen)/C3 - Data Engineering Fundamentals.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -99,7 +104,9 @@
             "type": "leaf",
             "state": {
               "type": "outline",
-              "state": {}
+              "state": {
+                "file": "docs/MOOCs/Book - Designing ML Systems (Chip Huyen)/C3 - Data Engineering Fundamentals.md"
+              }
             }
           },
           {
@@ -108,6 +115,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
+                "file": "docs/MOOCs/Book - Designing ML Systems (Chip Huyen)/C3 - Data Engineering Fundamentals.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": false
               }
@@ -122,15 +130,15 @@
   },
   "active": "2da34fa85bb1d1be",
   "lastOpenFiles": [
-    "docs/ML/Locality Sensitive Hashing.md",
-    "docs/ML/Parametric VS Non-Parametric models.md",
-    "docs/ML/ONNX.md",
-    "docs/ML/NLP Terminology.md",
-    "docs/ML/Naive Bayes.md",
-    "docs/ML/Reservoir Sampling.md",
-    "docs/ML/Recommender Systems.md",
-    "docs/ML/Random Forest.md",
-    "docs/ML/RDF.md",
-    "docs/ML/Strategies for OOV.md"
+    "docs/MOOCs/Book - Designing ML Systems (Chip Huyen)/C3 - Data Engineering Fundamentals.md",
+    "docs/Misc/Tips and Tricks.md",
+    "docs/Leetcode/Concepts/BFS.md",
+    "docs/Leetcode/Concepts/Cycle Detection  in Graph.md",
+    "docs/Leetcode/Concepts/Binary Search.md",
+    "docs/Leetcode/Concepts/Union Find (Disjoint Set).md",
+    "docs/Leetcode/Concepts/Trie.md",
+    "docs/Leetcode/Concepts/Topological Sort.md",
+    "docs/Leetcode/Concepts/Trees.md",
+    "docs/Leetcode/Concepts/Tips.md"
   ]
 }
