Moved image files to docs/Assets

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -8,7 +8,7 @@
   "fileSortOrder": "byModifiedTime",
   "promptDelete": false,
   "newFileLocation": "current",
-  "attachmentFolderPath": "Assets",
+  "attachmentFolderPath": "docs/Assets",
   "showFrontmatter": false,
   "pdfExportSettings": {
     "pageSize": "A4",
