Added content for "Modes of Data Flow"

--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -40,7 +40,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "number of islands",
+                "query": "binary search",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -131,14 +131,14 @@
   "active": "3c902989438f0ff9",
   "lastOpenFiles": [
     "docs/MOOCs/Book - Designing ML Systems (Chip Huyen)/C3 - Data Engineering Fundamentals.md",
+    "Untitled.md",
+    "docs/Assets/Pasted image 20220512092353.png",
+    "docs/Assets/Pasted image 20220510083623.png",
+    "docs/Leetcode/Concepts/Binary Search.md",
+    "docs/Leetcode/Concepts/Linked List.md",
+    "docs/Leetcode/Questions/143. Reorder List.md",
+    "docs/Leetcode/Questions/1428. Leftmost Column with at Least a One.md",
     "docs/Assets/Untitled.md",
-    "docs/Assets/Pasted image 20220509102003.png",
-    "docs/Assets/304.png",
-    "docs/Assets/clustering Advanced Kmeans.pdf",
-    "docs/Assets/graph.pdf",
-    "docs/Assets/3.png",
-    "docs/Assets/2.png",
-    "docs/Assets/1.png",
-    "docs/Misc/Tips and Tricks.md"
+    "docs/Assets/Pasted image 20220509102003.png"
   ]
 }
