Added Data Engineering

--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -131,6 +131,7 @@
   "active": "3c902989438f0ff9",
   "lastOpenFiles": [
     "docs/MOOCs/Book - Designing ML Systems (Chip Huyen)/C3 - Data Engineering Fundamentals.md",
+    "docs/MOOCs/Book - Designing ML Systems (Chip Huyen)/C4 - Training Data.md",
     "Untitled.md",
     "docs/Assets/Pasted image 20220512092353.png",
     "docs/Assets/Pasted image 20220510083623.png",
@@ -138,7 +139,6 @@
     "docs/Leetcode/Concepts/Linked List.md",
     "docs/Leetcode/Questions/143. Reorder List.md",
     "docs/Leetcode/Questions/1428. Leftmost Column with at Least a One.md",
-    "docs/Assets/Untitled.md",
-    "docs/Assets/Pasted image 20220509102003.png"
+    "docs/Assets/Untitled.md"
   ]
 }
