reservoir and importance sampling

--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -131,14 +131,14 @@
   "active": "3c902989438f0ff9",
   "lastOpenFiles": [
     "docs/MOOCs/Book - Designing ML Systems (Chip Huyen)/C4 - Training Data.md",
+    "docs/ML/Time Series.md",
+    "docs/Misc/Tips and Tricks.md",
+    "docs/Leetcode/Questions/69. Sqrt(x).md",
+    "docs/Leetcode/Questions/367. Valid Perfect Square.md",
+    "docs/Leetcode/Questions/102. Binary Tree Level Order Traversal.md",
+    "docs/Leetcode/Python.md",
+    "docs/Leetcode/Questions/101. Symmetric Tree.md",
     "docs/MOOCs/Book - Designing ML Systems (Chip Huyen)/C3 - Data Engineering Fundamentals.md",
-    "Untitled.md",
-    "docs/Assets/Pasted image 20220512092353.png",
-    "docs/Assets/Pasted image 20220510083623.png",
-    "docs/Leetcode/Concepts/Binary Search.md",
-    "docs/Leetcode/Concepts/Linked List.md",
-    "docs/Leetcode/Questions/143. Reorder List.md",
-    "docs/Leetcode/Questions/1428. Leftmost Column with at Least a One.md",
-    "docs/Assets/Untitled.md"
+    "Untitled.md"
   ]
 }
