--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "docs/MOOCs/Book - Designing ML Systems (Chip Huyen)/C4 - Training Data.md",
+            "file": "docs/MOOCs/Book - Designing ML Systems (Chip Huyen)/C7 - Model Deployment and Prediction Service.md",
             "mode": "source",
             "source": false
           }
@@ -77,7 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "docs/MOOCs/Book - Designing ML Systems (Chip Huyen)/C4 - Training Data.md",
+                "file": "docs/MOOCs/Book - Designing ML Systems (Chip Huyen)/C7 - Model Deployment and Prediction Service.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -105,7 +105,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "docs/MOOCs/Book - Designing ML Systems (Chip Huyen)/C4 - Training Data.md"
+                "file": "docs/MOOCs/Book - Designing ML Systems (Chip Huyen)/C7 - Model Deployment and Prediction Service.md"
               }
             }
           },
@@ -115,7 +115,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "docs/MOOCs/Book - Designing ML Systems (Chip Huyen)/C4 - Training Data.md",
+                "file": "docs/MOOCs/Book - Designing ML Systems (Chip Huyen)/C7 - Model Deployment and Prediction Service.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": false
               }
@@ -130,15 +130,15 @@
   },
   "active": "3c902989438f0ff9",
   "lastOpenFiles": [
-    "docs/MOOCs/Book - Designing ML Systems (Chip Huyen)/C4 - Training Data.md",
+    "docs/MOOCs/Book - Designing ML Systems (Chip Huyen)/C7 - Model Deployment and Prediction Service.md",
+    "docs/Leetcode/Questions/34. Find First and Last Position of Element in Sorted Array.md",
+    "docs/Leetcode/Questions/278. First Bad Version.md",
     "docs/ML/Time Series.md",
-    "docs/Misc/Tips and Tricks.md",
-    "docs/Leetcode/Questions/69. Sqrt(x).md",
-    "docs/Leetcode/Questions/367. Valid Perfect Square.md",
-    "docs/Leetcode/Questions/102. Binary Tree Level Order Traversal.md",
-    "docs/Leetcode/Python.md",
-    "docs/Leetcode/Questions/101. Symmetric Tree.md",
-    "docs/MOOCs/Book - Designing ML Systems (Chip Huyen)/C3 - Data Engineering Fundamentals.md",
-    "Untitled.md"
+    "docs/Leetcode/Questions/Binary.md",
+    "docs/Leetcode/Concepts/Binary Search.md",
+    "docs/Leetcode/Questions/744. Find Smallest Letter Greater Than Target.md",
+    "docs/MOOCs/Practical Time Series/Week 3.md",
+    "docs/MOOCs/Book - Designing ML Systems (Chip Huyen)/C4 - Training Data.md",
+    "docs/Misc/Tips and Tricks.md"
   ]
 }
