--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "docs/MOOCs/Book - Designing ML Systems (Chip Huyen)/C7 - Model Deployment and Prediction Service.md",
+            "file": "docs/Leetcode/Questions/34. Find First and Last Position of Element in Sorted Array.md",
             "mode": "source",
             "source": false
           }
@@ -40,7 +40,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "ensemble",
+                "query": "34",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -57,7 +57,8 @@
               "state": {}
             }
           }
-        ]
+        ],
+        "currentTab": 1
       }
     ],
     "direction": "horizontal",
@@ -77,7 +78,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "docs/MOOCs/Book - Designing ML Systems (Chip Huyen)/C7 - Model Deployment and Prediction Service.md",
+                "file": "docs/Leetcode/Questions/34. Find First and Last Position of Element in Sorted Array.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -105,7 +106,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "docs/MOOCs/Book - Designing ML Systems (Chip Huyen)/C7 - Model Deployment and Prediction Service.md"
+                "file": "docs/Leetcode/Questions/34. Find First and Last Position of Element in Sorted Array.md"
               }
             }
           },
@@ -115,7 +116,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "docs/MOOCs/Book - Designing ML Systems (Chip Huyen)/C7 - Model Deployment and Prediction Service.md",
+                "file": "docs/Leetcode/Questions/34. Find First and Last Position of Element in Sorted Array.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": false
               }
@@ -131,15 +132,15 @@
   },
   "active": "2afe65b1f17ba3fa",
   "lastOpenFiles": [
-    "docs/MOOCs/Book - Designing ML Systems (Chip Huyen)/C7 - Model Deployment and Prediction Service.md",
-    "docs/Assets/Excalidraw/C7 - Model Deployment and Prediction Service 2022-06-30 16-14-16.excalidraw.md",
-    "docs/Assets/Pasted image 20220629091827.png",
-    "docs/Personal/Quotes.md",
-    "docs/ML/Quantization.md",
-    "docs/Assets/Excalidraw/Quantization 2022-06-15 12-57-16.excalidraw.md",
-    "docs/ML/Depthwise Separable Convolution.md",
-    "docs/Assets/Excalidraw/Quantization 2022-06-15 12-57-16.excalidra.md",
-    "docs/ML/Low-Rank Factorization.md",
-    "docs/Assets/Excalidraw/C7 - Model Deployment and Prediction Service 2022-06-03 11.53.57.excalidraw.md"
+    "docs/Leetcode/Questions/34. Find First and Last Position of Element in Sorted Array.md",
+    "docs/Leetcode/Questions/98. Validate Binary Search Tree.md",
+    "docs/Leetcode/Concepts/Binary Search.md",
+    "docs/Leetcode/Questions/102. Binary Tree Level Order Traversal.md",
+    "docs/Leetcode/Questions/107. Binary Tree Level Order Traversal II.md",
+    "docs/Leetcode/Concepts/Trees.md",
+    "docs/Leetcode/Concepts/BFS.md",
+    "docs/Leetcode/Concepts/Backtracking.md",
+    "docs/Leetcode/Concepts/BST (Binary Search Tree).md",
+    "docs/Leetcode/Concepts/DFS.md"
   ]
 }
