--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "docs/Leetcode/Questions/73. Set Matrix Zeroes.md",
+            "file": "docs/MOOCs/Book - Robust Python/Chapter 2 and 3 - Type Annotations.md",
             "mode": "source",
             "source": false
           }
@@ -40,7 +40,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "",
+                "query": "3 sum",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -77,7 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "docs/Leetcode/Questions/73. Set Matrix Zeroes.md",
+                "file": "docs/MOOCs/Book - Robust Python/Chapter 2 and 3 - Type Annotations.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -105,7 +105,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "docs/Leetcode/Questions/73. Set Matrix Zeroes.md"
+                "file": "docs/MOOCs/Book - Robust Python/Chapter 2 and 3 - Type Annotations.md"
               }
             }
           },
@@ -115,7 +115,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "docs/Leetcode/Questions/73. Set Matrix Zeroes.md",
+                "file": "docs/MOOCs/Book - Robust Python/Chapter 2 and 3 - Type Annotations.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": false
               }
@@ -131,15 +131,15 @@
   },
   "active": "99b8e685a7b5c1b5",
   "lastOpenFiles": [
+    "docs/Leetcode/Questions/15. 3Sum.md",
+    "docs/Papers and Articles/Videos.md",
+    "docs/Papers and Articles/Paper - REBEL.md",
+    "docs/Leetcode/Questions/73. Set Matrix Zeroes.md",
     "docs/Leetcode/Questions/49. Group Anagrams.md",
     "docs/Misc/Obsidian Keyboard Shortcuts.md",
     "docs/ML/Similarity Search.md",
     "docs/Assets/Excalidraw/Similarity Search 2022-08-06 19-09-13.excalidraw.md",
     "docs/MOOCs/Book - Robust Python/Chapter 1 - Intentions.md",
-    "docs/Assets/Pasted image 20220806191758.png",
-    "docs/Assets/Pasted image 20220806191835.png",
-    "docs/Misc/Adding conda environment as a ipython kernels.md",
-    "docs/ML/Test - Kolmogorov-Smirnov (KS).md",
-    "docs/ML/ANN (Appox. Nearest Neighbors).md"
+    "docs/Assets/Pasted image 20220806191758.png"
   ]
 }
