--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,7 +4,7 @@
     "type": "split",
     "children": [
       {
-        "id": "99b8e685a7b5c1b5",
+        "id": "af6d2f53e8de3ea9",
         "type": "leaf",
         "state": {
           "type": "markdown",
@@ -61,7 +61,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 443
+    "width": 412.5
   },
   "right": {
     "id": "b78f15cdafdd7f3a",
@@ -129,17 +129,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "99b8e685a7b5c1b5",
+  "active": "af6d2f53e8de3ea9",
   "lastOpenFiles": [
+    "docs/Papers/Catching Unusual Traffic Behavior using TF–IDF-based Port Access Statistics Analysis.md",
+    "docs/Templates/Python code.md",
+    "docs/index.md",
+    "docs/Leetcode/Python.md",
+    "docs/Articles and Videos/Videos.md",
+    "docs/MOOCs/Book - Robust Python/Chapter 2 and 3 - Type Annotations.md",
     "docs/Leetcode/Questions/15. 3Sum.md",
-    "docs/Papers and Articles/Videos.md",
-    "docs/Papers and Articles/Paper - REBEL.md",
+    "docs/Articles and Videos/Paper - REBEL.md",
     "docs/Leetcode/Questions/73. Set Matrix Zeroes.md",
-    "docs/Leetcode/Questions/49. Group Anagrams.md",
-    "docs/Misc/Obsidian Keyboard Shortcuts.md",
-    "docs/ML/Similarity Search.md",
-    "docs/Assets/Excalidraw/Similarity Search 2022-08-06 19-09-13.excalidraw.md",
-    "docs/MOOCs/Book - Robust Python/Chapter 1 - Intentions.md",
-    "docs/Assets/Pasted image 20220806191758.png"
+    "docs/Leetcode/Questions/49. Group Anagrams.md"
   ]
 }
