--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,12 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "af6d2f53e8de3ea9",
+        "id": "536ad3c9d492479b",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "docs/MOOCs/Book - Robust Python/Chapter 2 and 3 - Type Annotations.md",
+            "file": "docs/MOOCs/Book - Robust Python/Chapter 2, 3 and 4 - Type Annotations.md",
             "mode": "source",
             "source": false
           }
@@ -40,7 +40,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "3 sum",
+                "query": "difference between",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -77,7 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "docs/MOOCs/Book - Robust Python/Chapter 2 and 3 - Type Annotations.md",
+                "file": "docs/MOOCs/Book - Robust Python/Chapter 2, 3 and 4 - Type Annotations.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -105,7 +105,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "docs/MOOCs/Book - Robust Python/Chapter 2 and 3 - Type Annotations.md"
+                "file": "docs/MOOCs/Book - Robust Python/Chapter 2, 3 and 4 - Type Annotations.md"
               }
             }
           },
@@ -115,31 +115,38 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "docs/MOOCs/Book - Robust Python/Chapter 2 and 3 - Type Annotations.md",
+                "file": "docs/MOOCs/Book - Robust Python/Chapter 2, 3 and 4 - Type Annotations.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": false
               }
             }
+          },
+          {
+            "id": "12eb8af679e4de3e",
+            "type": "leaf",
+            "state": {
+              "type": "calendar",
+              "state": {}
+            }
           }
         ],
-        "currentTab": 3
+        "currentTab": 4
       }
     ],
     "direction": "horizontal",
-    "width": 300,
-    "collapsed": true
+    "width": 300
   },
-  "active": "af6d2f53e8de3ea9",
+  "active": "536ad3c9d492479b",
   "lastOpenFiles": [
-    "docs/Papers/Catching Unusual Traffic Behavior using TF–IDF-based Port Access Statistics Analysis.md",
-    "docs/Templates/Python code.md",
-    "docs/index.md",
-    "docs/Leetcode/Python.md",
-    "docs/Articles and Videos/Videos.md",
-    "docs/MOOCs/Book - Robust Python/Chapter 2 and 3 - Type Annotations.md",
-    "docs/Leetcode/Questions/15. 3Sum.md",
-    "docs/Articles and Videos/Paper - REBEL.md",
-    "docs/Leetcode/Questions/73. Set Matrix Zeroes.md",
-    "docs/Leetcode/Questions/49. Group Anagrams.md"
+    "docs/NLP/Transformers.md",
+    "docs/NLP/Pointwise Mutual Information (PMI).md",
+    "docs/NLP/Electra.md",
+    "2022-08-09.md",
+    "docs/Assets/Excalidraw/Electra 2022-08-09 14-59-32.excalidraw.md",
+    "docs/Assets/Pasted image 20220809145701.png",
+    "docs/Assets/Pasted image 20220809145755.png",
+    "docs/Assets/Excalidraw/BERT Variants 2022-08-09 10-57-27.excalidraw.md",
+    "docs/Templates/callout.md",
+    "docs/Misc/Obsidian Tips.md"
   ]
 }
