--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -6,7 +6,7 @@
   "showLineNumber": true,
   "alwaysUpdateLinks": true,
   "fileSortOrder": "byModifiedTime",
-  "promptDelete": false,
+  "promptDelete": true,
   "newFileLocation": "current",
   "attachmentFolderPath": "docs/Assets",
   "showFrontmatter": false,
