--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,12 +4,26 @@
     "type": "split",
     "children": [
       {
-        "id": "300d6172852e2b9e",
+        "id": "7527542bb2c0050c",
         "type": "leaf",
+        "dimension": 43.388429752066116,
+        "state": {
+          "type": "markdown",
+          "state": {
+            "file": "docs/Papers/Paper Reading List.md",
+            "mode": "source",
+            "source": false
+          }
+        }
+      },
+      {
+        "id": "dd545073f61937f5",
+        "type": "leaf",
+        "dimension": 56.611570247933884,
         "state": {
           "type": "kanban",
           "state": {
-            "file": "docs/Personal/Reading and Writing.md"
+            "file": "docs/Personal/Reading and Writing Kanban.md"
           }
         }
       }
@@ -38,7 +52,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "difference between",
+                "query": "",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -64,11 +78,11 @@
             }
           }
         ],
-        "currentTab": 3
+        "currentTab": 2
       }
     ],
     "direction": "horizontal",
-    "width": 372.5036334991455
+    "width": 241.5036334991455
   },
   "right": {
     "id": "b78f15cdafdd7f3a",
@@ -84,7 +98,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "docs/Personal/Reading and Writing.md",
+                "file": "docs/Personal/Reading and Writing Kanban.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -112,7 +126,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "docs/Personal/Reading and Writing.md"
+                "file": "docs/Personal/Reading and Writing Kanban.md"
               }
             }
           },
@@ -122,7 +136,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "docs/Personal/Reading and Writing.md",
+                "file": "docs/Personal/Reading and Writing Kanban.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": false
               }
@@ -137,24 +151,24 @@
             }
           }
         ],
-        "currentTab": 1
+        "currentTab": 4
       }
     ],
     "direction": "horizontal",
     "width": 300,
     "collapsed": true
   },
-  "active": "300d6172852e2b9e",
+  "active": "dd545073f61937f5",
   "lastOpenFiles": [
-    "docs/NLP/Electra.md",
-    "docs/Personal/Reading and Writing.md",
-    "docs/Personal/Interview Preparation Checklist.md",
-    "docs/Personal/Quotes.md",
-    "docs/Personal/Checks.md",
-    "docs/Personal/Tasks.md",
-    "docs/Personal/Work/Log Anomaly Detection.md",
-    "docs/Papers/DeepLog - Anomaly Detection and Diagnosis from System Logs through Deep Learning.md",
-    "docs/Papers/Reading List.md",
-    "docs/Papers/Deep Learning for Anomaly Detection in Log Data A Survey.md"
+    "docs/Books/Book - Robust Python/Chapter 10 - User defined types CLASSES.md",
+    "docs/Personal/Reading and Writing Kanban.md",
+    "docs/Books/Book - Robust Python/Chapter 9 - User defined types.md",
+    "docs/Papers/Paper Reading List.md",
+    "docs/Books/Book - Robust Python/Chapter 16 - Dependencies, Composability.md",
+    "docs/Personal/Work/RASA Chatbot.md",
+    "docs/Personal/Untitled Kanban.md",
+    "docs/NLP/Transformers.md",
+    "docs/Templates/callout-tip.md",
+    "docs/Templates/callout-library.md"
   ]
 }
