--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -6,11 +6,11 @@
       {
         "id": "12f098563d0b4222",
         "type": "leaf",
-        "dimension": 45.936981757877284,
+        "dimension": 64.41471571906354,
         "state": {
           "type": "markdown",
           "state": {
-            "file": "docs/Personal/Work/AIOPs - Timing.md",
+            "file": "docs/Leetcode/Questions/347. Top K Frequent Elements.md",
             "mode": "source",
             "source": false
           }
@@ -19,7 +19,7 @@
       {
         "id": "b5ebfb199ed09298",
         "type": "leaf",
-        "dimension": 54.063018242122716,
+        "dimension": 35.58528428093645,
         "state": {
           "type": "markdown",
           "state": {
@@ -54,7 +54,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "word",
+                "query": "#finding",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -99,7 +99,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "docs/Leetcode/Questions/75. Sort Colors.md",
+                "file": "docs/Leetcode/Questions/347. Top K Frequent Elements.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -127,7 +127,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "docs/Leetcode/Questions/75. Sort Colors.md"
+                "file": "docs/Leetcode/Questions/347. Top K Frequent Elements.md"
               }
             }
           },
@@ -137,7 +137,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "docs/Leetcode/Questions/75. Sort Colors.md",
+                "file": "docs/Leetcode/Questions/347. Top K Frequent Elements.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": false
               }
@@ -159,17 +159,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "b5ebfb199ed09298",
+  "active": "12f098563d0b4222",
   "lastOpenFiles": [
-    "docs/Personal/Note to Myself.md",
+    "docs/Leetcode/Questions/215. Kth Largest Element in an Array.md",
+    "docs/Leetcode/Questions/347. Top K Frequent Elements.md",
+    "docs/Leetcode/Questions/973. K Closest Points to Origin.md",
+    "docs/Leetcode/Questions/703. Kth Largest Element in a Stream.md",
+    "docs/Leetcode/Concepts/Heap.md",
     "docs/Personal/Work/AIOPs - Timing.md",
+    "docs/Leetcode/Questions/75. Sort Colors.md",
+    "docs/Personal/Note to Myself.md",
     "docs/Personal/Work/TODOs.md",
-    "docs/Personal/Work/Log Anomaly Detection/Untitled.md",
-    "docs/Personal/Work/AIOPs - Active Assurance.md",
-    "docs/Personal/Work/Log Anomaly Detection/Paper Notes.md",
-    "docs/Personal/Quotes.md",
-    "docs/Personal/My Achievements.md",
-    "docs/Personal/Reading and Writing Kanban.md",
-    "docs/Misc/Project Structure.md"
+    "docs/Personal/Work/Log Anomaly Detection/Untitled.md"
   ]
 }
